[gd_scene load_steps=5 format=3 uid="uid://bceji31cyblec"]

[ext_resource type="Script" uid="uid://dutk0mp6uw4de" path="res://scripts/scene.gd" id="1_3253y"]
[ext_resource type="Texture2D" uid="uid://bo3tm45ptj5kc" path="res://icon.svg" id="1_nxogm"]
[ext_resource type="PackedScene" uid="uid://blh6mudskpeig" path="res://player/player.tscn" id="3_3253y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3253y"]
metallic = 1.0
metallic_texture = ExtResource("1_nxogm")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_3253y")
player_scene = ExtResource("3_3253y")

[node name="Ground" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.99408, -12.5137, 0)
material_override = SubResource("StandardMaterial3D_3253y")
use_collision = true
size = Vector3(100, 1, 100)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.844468, 0.535606, 0, -0.535606, -0.844468, 5.76845, 23.01, -5.58369)

[node name="Menu" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Join" type="Button" parent="Menu"]
layout_mode = 2
disabled = true
text = "Join"

[node name="Host" type="Button" parent="Menu"]
layout_mode = 2
text = "Host"

[node name="Refresh" type="Button" parent="Menu"]
layout_mode = 2
text = "Refresh"

[node name="LobbyStatus" type="Label" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2

[node name="SessionsContainer" type="VBoxContainer" parent="Menu"]
unique_name_in_owner = true
layout_mode = 2

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("uid://blh6mudskpeig")
spawn_path = NodePath("..")

[connection signal="pressed" from="Menu/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Refresh" to="." method="get_sessions"]
